--- a/action.yaml
+++ b/action.yaml
@@ -12,6 +12,23 @@ inputs:
     description: Directory where the checked package has been cloned.
     required: false
     default: repository
+  check-args:
+    description: Additional check arguments.
+    required: false
+    default: ""
+  build-args:
+    description: Additional build arguments.
+    required: false
+    default: ""
+  additional-env-vars:
+    description: |
+      Additional environment variables.
+      Example usage:
+        additional-env-vars: |
+          ABC=123
+          XYZ=456
+    required: false
+    default: ""
 
 branding:
   icon: 'refresh-ccw'
@@ -22,6 +39,16 @@ runs:
   steps:
     - name: Run minimum dependency check
       run: |
+        if [ "${{ inputs.additional-env-vars }}" != "" ]
+        then {
+          echo -e "${{ inputs.additional-env-vars }}" > /tmp/dotenv.env
+          export $(tr '\n' ' ' < /tmp/dotenv.env)
+        }
+        fi
+        echo "Env:"
+        env
+        echo "check-args = ${{ inputs.check-args }}"
+        echo "build-args = ${{ inputs.build-args }}"
         Rscript ${GITHUB_ACTION_PATH}/rmindepscheck.R ${{ inputs.repository-path }}
       shell: bash
       env:
