--- a/action.yaml
+++ b/action.yaml
@@ -1,7 +1,7 @@
 ---
 name: R minimum dependency check
 author: Insights Engineering
-description: Check if R package works correctly with minimum version of dependencies installed
+description: Derieve minimum version of package dependencies, install and execute R CMD CHECK
 
 inputs:
   github-token:
@@ -13,11 +13,11 @@ inputs:
     required: false
     default: repository
   check-args:
-    description: Additional check arguments.
+    description: Optional value of args argument to rcmdcheck::rcmdcheck in form of a string with space as delimeter, e.g. "--no-examples --no-tests".
     required: false
     default: ""
   build-args:
-    description: Additional build arguments.
+    description: Optional value of build_args argument to rcmdcheck::rcmdcheck in form of a string with space as delimeter, e.g. "--force --keep-empty-dirs".
     required: false
     default: ""
   additional-env-vars:
@@ -45,7 +45,7 @@ runs:
           export $(tr '\n' ' ' < /tmp/dotenv.env)
         }
         fi
-        Rscript ${GITHUB_ACTION_PATH}/rmindepscheck.R ${{ inputs.repository-path }}
+        Rscript ${GITHUB_ACTION_PATH}/rmindepscheck.R ${{ inputs.repository-path }} ${{ inputs.build-args }} ${{ inputs.check-args }}
       shell: bash
       env:
         GITHUB_PAT: "${{ inputs.github-token }}"
