--- a/action.yaml
+++ b/action.yaml
@@ -50,6 +50,7 @@ runs:
           export $(tr '\n' ' ' < /tmp/dotenv.env)
         }
         fi
-        export GITHUB_PAT="${{ inputs.github-token }}"
         Rscript ${GITHUB_ACTION_PATH}/script.R ${{ inputs.repository-path }} ${{ inputs.build-args }} ${{ inputs.check-args }} ${{ inputs.strategy }}
       shell: bash
+      env:
+        GITHUB_PAT: "${{ inputs.github-token }}"
