--- a/action.yaml
+++ b/action.yaml
@@ -52,7 +52,7 @@ runs:
         echo "R_LIBS_SITE = $R_LIBS_SITE"
         echo "R_LIBS = $R_LIBS"
         fi
-        Rscript ${GITHUB_ACTION_PATH}/script.R '${{ inputs.repository-path }}' '${{ inputs.build-args }}' '${{ inputs.check-args }}' '${{ inputs.strategy }}'
+        Rscript --vanilla ${GITHUB_ACTION_PATH}/script.R '${{ inputs.repository-path }}' '${{ inputs.build-args }}' '${{ inputs.check-args }}' '${{ inputs.strategy }}'
       shell: bash
       env:
         GITHUB_PAT: "${{ inputs.github-token }}"
