--- a/action.yaml
+++ b/action.yaml
@@ -44,15 +44,12 @@ runs:
     - name: Run Dependency Test
       run: |
         echo "Dependency Test strategy: ${{ inputs.strategy }}"
-        if [ '${{ inputs.additional-env-vars }}' != "" ]
+        if [ "${{ inputs.additional-env-vars }}" != "" ]
         then {
           echo -e "${{ inputs.additional-env-vars }}" > /tmp/dotenv.env
           export $(tr '\n' ' ' < /tmp/dotenv.env)
         }
-        echo "R_LIBS_SITE = $R_LIBS_SITE"
-        echo "R_LIBS = $R_LIBS"
         fi
-        sed -i 's/R_LIBS_SITE.*$//g' /usr/local/lib/R/etc/Renviron
         Rscript ${GITHUB_ACTION_PATH}/script.R '${{ inputs.repository-path }}' '${{ inputs.build-args }}' '${{ inputs.check-args }}' '${{ inputs.strategy }}'
       shell: bash
       env:
