--- a/action.yaml
+++ b/action.yaml
@@ -13,7 +13,7 @@ inputs:
     required: false
     default: "."
   extra-deps:
-    description: Extra dependencies specified similarly to the `DESCRIPTION` file, i.e. `"<package name> (<operator> <version>)"` where both `<operator>` and `<version>` are optional. Multiple entries are possible separated by `";"`.
+    description: Extra dependencies specified similarly as in the `DESCRIPTION` file, i.e. `"<package name> (<operator> <version>)"` where both `<operator>` and `<version>` are optional. Multiple entries are possible separated by `";"`.
     required: false
     default: ""
   check-args:
