feat: allow custom repositories

--- a/action.yaml
+++ b/action.yaml
@@ -24,6 +24,13 @@ inputs:
     description: Optional value of build_args argument to rcmdcheck::rcmdcheck in form of a string with space as delimeter, e.g. "--force --keep-empty-dirs".
     required: false
     default: ""
+  additional-repos:
+    description: |
+      Optional value that add R repositories for a given strategy (multiple repos per strategy can be defined by separating with a comma).
+      Example usage:
+        additional-repos: https://repo1.example.com,https://repo2.example.com
+    required: false
+    default: ""
   strategy:
     description: |
       Strategy to test package dependencies. One of: min_isolated, min_cohort, release, max.
@@ -57,7 +64,7 @@ runs:
         echo ".libPaths(\" \", include.site = FALSE)" > .Rprofile
         export R_LIBS_SITE=" "
         export R_LIBS_USER=" "
-        Rscript ${GITHUB_ACTION_PATH}/script.R '${{ inputs.repository-path }}' '${{ inputs.extra-deps }}' '${{ inputs.build-args }}' '${{ inputs.check-args }}' '${{ inputs.strategy }}'
+        Rscript ${GITHUB_ACTION_PATH}/script.R '${{ inputs.repository-path }}' '${{ inputs.extra-deps }}' '${{ inputs.build-args }}' '${{ inputs.check-args }}' '${{ inputs.strategy }}' '${{ inputs.additional-repos }}'
       shell: bash
       env:
         GITHUB_PAT: "${{ inputs.github-token }}"
