--- a/action.yaml
+++ b/action.yaml
@@ -1,7 +1,10 @@
 ---
 name: Dependency Test
 author: Insights Engineering
-description: Resolve package dependencies according to the strategy used, install them and execute R CMD CHECK
+description: |
+  Execute R CMD CHECK using various strategies of package dependencies versions.
+  The aim is to check correctness of a `DESCRIPTION` file, i.e. minimal version of dependencies.
+  This covers only _direct_ dependencies, i.e. it does not resolve dependencies of dependencies recursively.
 
 inputs:
   github-token:
@@ -39,9 +42,9 @@ inputs:
     default: ""
   additional-repos:
     description: |
-      Optional value that add R repositories for a given strategy (multiple repos per strategy can be defined by separating with a comma).
-      Example usage:
-        additional-repos: https://repo1.example.com,https://repo2.example.com
+      Optional value that add R repositories for a given strategy. Multiple entries are possible separated by `";"`.
+
+      Example usage: `additional-repos: https://repo1.example.com;https://repo2.example.com`
     required: false
     default: ""
 
