--- a/action.yaml
+++ b/action.yaml
@@ -5,7 +5,7 @@ description: Resolve package dependencies according to the strategy used, instal
 
 inputs:
   github-token:
-    description: Token to clone dependencies from GitHub repositories.
+    description: Token with permissions to clone repositories with dependencies.
     required: false
     default: ""
   repository-path:
