Solves problem with second-level dependencies (#22)
Related to https://github.com/insightsengineering/verdepcheck/issues/38

In scenarios where the `DESCRIPTION` file has top-level dependencies
(`Depends`, `Imports`, `Suggests`, `Extends`) that depend on packages
not yet released on CRAN, this new option allows to define repositories
that may fill the gap.

In particular, this is important on `max` strategy, as they might depend
on secondary packages that have changes that only exist on the
repository.

### Changes description

- Adds new option to add extra repositories
- If user wants to fully override default repository, they can replace
environmental variables
- Adds styling to first (manual) header
- Better organizes readme

### TODO:

- [ ] Understand how to use this new option in github action `matrix`

### Use case examples

This will be especially helpful with `max` strategy to allow more
packages to be compiled with latest development versions

- `insightsengineering` packages can use `r-universe.dev` to pull
secondary dependencies such as `formatters`
- Pull all latest development from tidyverse packages by using
https://tidyverse.r-universe.dev/builds

`release` strategy can also use this if downstream packages are not
being release on CRAN

`min_***` strategy shouldn't use this option

--- a/action.yaml
+++ b/action.yaml
@@ -5,7 +5,7 @@ description: Resolve package dependencies according to the strategy used, instal
 
 inputs:
   github-token:
-    description: Token to clone dependencies from GitHub repositories.
+    description: Token with permissions to clone repositories with dependencies.
     required: false
     default: ""
   repository-path:
@@ -37,6 +37,13 @@ inputs:
           XYZ=456
     required: false
     default: ""
+  additional-repos:
+    description: |
+      Optional value that add R repositories for a given strategy. Multiple entries are possible separated by `";"`.
+
+      Example usage: `additional-repos: https://repo1.example.com;https://repo2.example.com`
+    required: false
+    default: ""
 
 branding:
   icon: 'refresh-ccw'
@@ -57,7 +64,7 @@ runs:
         echo ".libPaths(\" \", include.site = FALSE)" > .Rprofile
         export R_LIBS_SITE=" "
         export R_LIBS_USER=" "
-        Rscript ${GITHUB_ACTION_PATH}/script.R '${{ inputs.repository-path }}' '${{ inputs.extra-deps }}' '${{ inputs.build-args }}' '${{ inputs.check-args }}' '${{ inputs.strategy }}'
+        Rscript ${GITHUB_ACTION_PATH}/script.R '${{ inputs.repository-path }}' '${{ inputs.extra-deps }}' '${{ inputs.build-args }}' '${{ inputs.check-args }}' '${{ inputs.strategy }}' '${{ inputs.additional-repos }}'
       shell: bash
       env:
         GITHUB_PAT: "${{ inputs.github-token }}"
